@@ -1,26 +1,21 @@
 package j2q.setup.definitions.design.schema.tables;
 
 import j2q.core.sqlCreator.PairOfTableField;
+import j2q.core.support.TTable;
 import j2q.setup.definitions.design.schema.enums.GlobalFieldsDefinition;
 import j2q.setup.definitions.design.schema.enums.GlobalTablesDefinition;
-import j2q.core.tds.DbTable;
-import com.google.common.collect.ImmutableList;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
 
 @Component
-public class TUsers extends DbTable {
-    @Override public GlobalTablesDefinition.DbT getDbT() { return GlobalTablesDefinition.DbT.Users; }
-    @Override public String getSystemName() { return "Sys_Users"; }
-    @Override public String getTablePrefixForFields() { return "AC"; }
-    @Override public List<GlobalFieldsDefinition.DbF> getHasKeys() { return List.of(GlobalFieldsDefinition.DbF.RecID); }
-
-    public final PairOfTableField REC_ID = PairOfTableField.of(getDbT(), GlobalFieldsDefinition.DbF.RecID);
-    public final PairOfTableField USER_NAME = PairOfTableField.of(getDbT(), GlobalFieldsDefinition.DbF.UserName);
-    public final PairOfTableField USER_PASSWORD = PairOfTableField.of(getDbT(), GlobalFieldsDefinition.DbF.UserPassword);
-    @Override public List<PairOfTableField> getDbFs() {
-        return ImmutableList.of(
-                REC_ID, USER_NAME, USER_PASSWORD);
+public class TUsers extends TTable {
+    public TUsers() {
+        super(GlobalTablesDefinition.DbT.Users, "Sys_Users", "AC", List.of(GlobalFieldsDefinition.DbF.RecID));
+        setDbFs(REC_ID, USER_NAME, USER_PASSWORD);
     }
+
+    public final PairOfTableField REC_ID = getPairOfTableField(GlobalFieldsDefinition.DbF.RecID);
+    public final PairOfTableField USER_NAME = getPairOfTableField(GlobalFieldsDefinition.DbF.UserName);
+    public final PairOfTableField USER_PASSWORD = getPairOfTableField(GlobalFieldsDefinition.DbF.UserPassword);
 }
